@@ -1,24 +1,24 @@
 /**
- * Waffle (https://github.com/dblock/waffle)
+ * Waffle (https://github.com/Waffle/waffle)
  *
- * Copyright (c) 2010 - 2016 Application Security, Inc.
+ * Copyright (c) 2010-2018 Application Security, Inc.
  *
  * All rights reserved. This program and the accompanying materials are made available under the terms of the Eclipse
  * Public License v1.0 which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html.
+ * https://www.eclipse.org/legal/epl-v10.html.
  *
  * Contributors: Application Security, Inc.
  */
 package waffle.shiro.negotiate;
 
-import org.apache.shiro.authc.AuthenticationException;
-import org.apache.shiro.authc.AuthenticationToken;
-import org.junit.Assert;
-import org.junit.Test;
-
 import mockit.Expectations;
 import mockit.Mocked;
 import mockit.Tested;
+
+import org.apache.shiro.authc.AuthenticationException;
+import org.apache.shiro.authc.AuthenticationToken;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 /**
  * The Class NegotiateAuthenticationRealmTest.
@@ -32,17 +32,18 @@ public final class NegotiateAuthenticationRealmTest {
     private NegotiateAuthenticationRealm negAuthRealm;
 
     @Mocked
-    AuthenticationToken                  authenticationToken;
+    AuthenticationToken authenticationToken;
 
     /**
      * Test supports.
      */
     @Test
     public void testSupports() {
-        Assert.assertFalse("Non-NegotiateToken should not be supported.",
-                this.negAuthRealm.supports(this.authenticationToken));
+        Assertions.assertFalse(this.negAuthRealm.supports(this.authenticationToken),
+                "Non-NegotiateToken should not be supported.");
 
-        Assert.assertTrue(this.negAuthRealm.supports(new NegotiateToken(null, null, null, null, false, false, null)));
+        Assertions
+                .assertTrue(this.negAuthRealm.supports(new NegotiateToken(null, null, null, null, false, false, null)));
     }
 
     /**
@@ -51,14 +52,16 @@ public final class NegotiateAuthenticationRealmTest {
      * @param negotiateToken
      *            the negotiate token
      */
-    @Test(expected = AuthenticationException.class)
+    @Test
     public void testAuthenticationInfo(@Mocked final NegotiateToken negotiateToken) {
-        Assert.assertNotNull(new Expectations() {
+        Assertions.assertNotNull(new Expectations() {
             {
                 negotiateToken.getIn();
-                this.result = new Byte((byte) 0);
+                this.result = Byte.valueOf((byte) 0);
             }
         });
-        this.negAuthRealm.doGetAuthenticationInfo(negotiateToken);
+        Assertions.assertThrows(AuthenticationException.class, () -> {
+            this.negAuthRealm.doGetAuthenticationInfo(negotiateToken);
+        });
     }
 }
